# multisubgroup-source

./: .gitignore  README.md  compile_app.sh  config_build_flash.sh  west.yml
app/: CMakeLists.txt  Kconfig  overlay-bt_ll_sw_split.conf  prj.conf
app/src/: lc3_audio.h  main.c
